all clear, animations left

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -215,6 +215,10 @@ img {
 
 /* Active link */
 
+.active-link{
+  color: var(--second-color);
+}
+
 /*=============== HOME ===============*/
 
 .home__container {
